<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/vibrate_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_silence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silence" />

        <RadioButton android:id="@+id/radio_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate" />

        <RadioButton android:id="@+id/radio_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ring" />
    </RadioGroup>


</RelativeLayout>
